--- a/index.html
+++ b/index.html
@@ -1,36 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <title>Frontend Mentor | Article preview component</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main class="container">
+        <section class="card">
+            <div class="card-image">
+                <img src="images/drawers.jpg" alt="drawers">
+            </div>
+            <div class="card-body">
+                <div class="card-content">
+                    <div class="card-title">
+                        <h1>Shift the overall look and feel by adding these wonderful
+                            touches to furniture in your home</h1>
+                    </div>
+                    <div class="card-text">
+                        <p>Ever been in a room and felt like something was missing? Perhaps
+                            it felt slightly bare and uninviting. I’ve got some simple tips
+                            to help you make any room feel complete.</p>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <div class="card-profile">
+                        <div class="card-profile-info">
+                            <img src="images/avatar-michelle.jpg" alt="michelle">
+                            <div>
+                                <h2>Michelle Appleton</h2>
+                                <p>28 Jun 2020</p>
+                            </div>
+                        </div>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
+                        <button id="btn-share-light" class="btn-share btn-light">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
+                                <path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="card-share">
+                <div class="share-socials">
+                    <h3>SHARE</h3>
+                    <div class="socials">
+                        <img src="images/icon-facebook.svg" alt="facebook">
+                        <img src="images/icon-twitter.svg" alt="twitter">
+                        <img src="images/icon-pinterest.svg" alt="pinterest">
+                    </div>
+                </div>
+                <button id="btn-share-dark" class="btn-share btn-dark">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
+                        <path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/>
+                    </svg>
+                </button>
+            </div>
+        </section>
+    </main>
 
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+    </div>
 </body>
+<script src="dist/index.js"></script>
 </html>
